@@ -8,10 +8,16 @@ Imager 0.63 - unreleased
 
  - moved the imtoc.perl code into Imager::Preprocess
 
- - paste() now adapts the source image data to the destination, so you
-   can now safely paste from greyscale images to color images or back,
-   or from alpha channel images to noalpha channels or back.
+ - paste() and rubthrough() now adapt the source image data to the
+   destination, so you can now safely paste/rubthrough from greyscale
+   images to color images or back, or from alpha channel images to
+   noalpha channels or back.
    https://rt.cpan.org/Ticket/Display.html?id=30908
+
+ - rubthrough() now falls back to pasting when the source doesn't have
+   an alpha channel.  This effectively treats the source as having a
+   max alpha channel, the right thing to do.
+   http://rt.cpan.org/Ticket/Display.html?id=29944
 
 Bug fixes:
 
